--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h2>Scan to Print</h2>
 
 <img
-  src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=smapri:/Format/Print?__format_id_number=1&__format_archive_url=https%3A%2F%2Fraw.githubusercontent.com%2Fwingsato%2Fsmapri%2Fmain%2Fsmapri-drive02.spfmtz"
+  src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=smapri:/Format/Print?__format_id_number=1&__format_archive_url=https%3A%2F%2Fraw.githubusercontent.com%2Fwingsato%2Fsmapri%2Fmain%2Fsmapri-variable-test.spfmtz"
   alt="SmaPri Print QR Code"
 />
 
