--- a/index.html
+++ b/index.html
@@ -4,33 +4,99 @@
 <meta charset="utf-8">
 <title>SmaPri Print</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+    body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+        background: #f4f6f8;
+        margin: 0;
+        padding: 20px;
+    }
+
+    .container {
+        max-width: 420px;
+        margin: 40px auto;
+        background: #ffffff;
+        padding: 24px;
+        border-radius: 10px;
+        box-shadow: 0 8px 24px rgba(0,0,0,0.08);
+    }
+
+    h2 {
+        margin-top: 0;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    .field {
+        margin-bottom: 16px;
+    }
+
+    label {
+        display: block;
+        font-size: 14px;
+        margin-bottom: 6px;
+        color: #333;
+    }
+
+    input {
+        width: 100%;
+        padding: 10px 12px;
+        font-size: 15px;
+        border-radius: 6px;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
+    }
+
+    input:focus {
+        outline: none;
+        border-color: #007bff;
+    }
+
+    button {
+        width: 100%;
+        padding: 12px;
+        font-size: 16px;
+        border: none;
+        border-radius: 6px;
+        background: #007bff;
+        color: white;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background: #0069d9;
+    }
+</style>
 </head>
 
 <body>
 
-<h3>Label Data</h3>
+<div class="container">
+    <h2>Print Label</h2>
 
-<label>
-Item Name:
-<input id="item_name" type="text" value="Apple">
-</label><br><br>
+    <div class="field">
+        <label for="item_name">Item Name</label>
+        <input id="item_name" type="text" value="Apple">
+    </div>
 
-<label>
-Origin:
-<input id="item_origin" type="text" value="USA">
-</label><br><br>
+    <div class="field">
+        <label for="item_origin">Origin</label>
+        <input id="item_origin" type="text" value="USA">
+    </div>
 
-<label>
-Batch:
-<input id="item_batch" type="text" value="B24011601">
-</label><br><br>
+    <div class="field">
+        <label for="item_batch">Batch</label>
+        <input id="item_batch" type="text" value="B24011601">
+    </div>
 
-<label>
-Price:
-<input id="item_price" type="number" step="0.01" value="1.50">
-</label><br><br>
+    <div class="field">
+        <label for="item_price">Price</label>
+        <input id="item_price" type="number" step="0.01" value="1.50">
+    </div>
 
-<button onclick="printLabel()">Print Label</button>
+    <button onclick="printLabel()">Print Label</button>
+</div>
 
 <script>
 function isIOS() {
@@ -42,18 +108,13 @@ function printLabel() {
     var formatUrl =
         "https://raw.githubusercontent.com/wingsato/smapri/main/smarpi-NTUC-test.spfmtz";
 
-    var itemName   = document.getElementById("item_name").value;
-    var itemOrigin = document.getElementById("item_origin").value;
-    var itemBatch  = document.getElementById("item_batch").value;
-    var itemPrice  = document.getElementById("item_price").value;
-
     var params =
         "__format_id_number=1" +
         "&__format_archive_url=" + encodeURIComponent(formatUrl) +
-        "&item_name="   + encodeURIComponent(itemName) +
-        "&item_origin=" + encodeURIComponent(itemOrigin) +
-        "&item_batch="  + encodeURIComponent(itemBatch) +
-        "&item_price="  + encodeURIComponent(itemPrice);
+        "&item_name="   + encodeURIComponent(document.getElementById("item_name").value) +
+        "&item_origin=" + encodeURIComponent(document.getElementById("item_origin").value) +
+        "&item_batch="  + encodeURIComponent(document.getElementById("item_batch").value) +
+        "&item_price="  + encodeURIComponent(document.getElementById("item_price").value);
 
     var url = isIOS()
         ? "smapri:/Format/Print?" + params
